feat: :sparkles: Estructura html header terminada

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <h2>AQUA</h2>
+            <img src="src/storage/img/Water-drop.png" alt="Aqua logo">
+        </div>
+        <nav class="links">
+            <a href="">INICIO</a>
+            <a href="#">CÓMO JUGAR</a>
+            <a href="#">APÓYANOS</a>
+            <a href="#">SOBRE NOSOTROS</a>
+        </nav>
+        <div class="theme__modes">
+            <img src="src/storage/img/moon.png" alt="Dark mode">
+            <img src="src/storage/img/Sun.png" alt="Light mode">
+        </div>
+    </header>
+    <body>
+        
+    </body>
 </body>
 </html>
