feat: :sparkles: Inicio pagina terminada

--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@
         </div>
     </header>
     <body>
-        
+        <section id="inicio">
+            <div class="main__title">
+                <img src="src/storage/img/logo.png" alt="">
+                <h2>Somos creatividad, somos Crae</h2>
+                <p>Crae es un juego de cartas inclusivo donde personas videntes, no videntes y con discapacidad visual pueden participar y disfrutar en conjunto.</p>
+            </div>
+            <div>
+                <img src="src/storage/img/cards-images.png" alt="">
+                <div class="comprar">
+                    <img src="src/storage/img/shopping-cart.png" alt="">
+                    <b>Comprar</b>
+                </div>
+            </div>
+        </section>
     </body>
 </body>
 </html>
