--- a/index.html
+++ b/index.html
@@ -45,32 +45,45 @@
             </div>
             <div class="steps">
                 <div class="step_1">
-                    <h2>1</h2>
+                    <h3>1</h3>
                     <p>Uno de los jugadores hace de “creativo” en cada uno de los turnos. Observa sus 6 cartas de la mano y, de una de ellas, debe construir una frase, palabra o sonido y decirla en voz alta (sin mostrar la carta a los otros jugadores). La frase puede ser inventada o puede estar inspirada en la poesía, literatura, cine, etc. 
                     </p>
                     <img src="src/storage/img/cards-blank.png" alt="Cartas en blanco">
                 </div>
                 <div class="step_2">
-                    <h2>2</h2>
+                    <h3>2</h3>
                     <p>Comenzamos el juego de izquierda a derecha. Selecciona una carta que inspire tu frase y dila en voz alta. El resto de jugadores seleccionará de entre sus cartas la que mejor se adapte a la frase construida por el creativo.</p>
                     <img src="src/storage/img/item-checked.png" alt="Seleccion">
                 </div>
                 <div class="step_3">
-                    <h2>3</h2>
+                    <h3>3</h3>
                     <p>El objetivo de los jugadores es adivinar cuál de las cartas es la que el creativo usó para construir su frase. Cada jugador vota de forma secreta la carta que cree que pertenece al creativo. Para ello, coloca boca abajo frente a él un objeto que hayas escogido previamente. </p>
                     <img src="src/storage/img/vote.png" alt="Cabina de votacion">
                 </div>
                 <div class="step_4">
-                    <h2>4</h2>
+                    <h3>4</h3>
                     <p>- Si todos los jugadores aciertan la carta del creativo, todos los jugadores excepto el creativo ganan 2 puntos. <br>
                         - En cualquier otro caso, tanto el creativo como los jugadores que hayan acertado, obtienen 3 puntos. <br>
                         - Todos los jugadores ganan un punto por cada voto que reciba su carta. </p>
                     <img src="src/storage/img/list-wticks.png" alt="Lista aprovada">
                 </div>
                 <div class="step_5">
-                    <h2>5</h2>
+                    <h3>5</h3>
                     <p>Cada jugador roba cartas hasta tener 6 en su mano. El juego termina cuando se roba la última carta. El jugador que más lejos haya llegado en la escala de puntuación es el ganador.</p>
                     <img src="src/storage/img/montain.png" alt="Meta">
+                </div>
+            </div>
+        </section>
+        <section id="apoyanos">
+            <div class="text__support">
+                <h2>Apoyanos</h2>
+                <p>Por favor, si quieres ayudarnos económicamente, no dudes en donar en Kickstarter.
+                    Así financiarías nuestro proyecto y contribuirías a cumplir este gran sueño.</p>
+            </div>
+            <div class="images__support">
+                <img src="src/storage/img/monitor.png" alt="pantalla monitor">
+                <div class="aporte">
+                    <p>Haz tu aporte</p>
                 </div>
             </div>
         </section>
