feat: :sparkles: Estructura seccion "sobre nosotros" terminada

--- a/index.html
+++ b/index.html
@@ -87,6 +87,26 @@
                 </div>
             </div>
         </section>
+        <section id="nosotros">
+            <div class="text__aboutus">
+                <h2>Sobre nosotros</h2>
+                <p>Somos Aqua, un equipo que apuesta por la inclusión, principalmente por las personas no videntes o de visibilidad reducida.
+                    Creemos que la diversión no debe distinguir condiciones físicas es por eso que desarrollamos “CRAE”, el cual busca ser un juego de cartas inclusivo donde personas videntes o no videntes pueden participar y disfrutar en conjunto.
+                    <br>
+                    <br>
+                    Puedes encontrarnos en Instagram como @crae.cl o llamarnos a nuestro número telefónico 9 7889 4758.</p>
+            </div>
+            <div class="images__aboutus">
+                <div class="images__blinds">
+                    <img src="src/storage/img/blind-right.png" alt="gente ciega">
+                    <img src="src/storage/img/people-blind.png" alt="gente ciega">
+                </div>
+                <div class="logo__aboutus">
+                    <h3>AQUA</h3>
+                    <img src="src/storage/img/Water-drop.png" alt="Logo de empresa">
+                </div>
+            </div>
+        </section>
     </body>
 </body>
 </html>
