feat: :sparkles: Se añadió el apartado de redes sociales

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                     <b>Comprar</b>
                 </div>
             </div>
+            <div class="social__media">
+                <a href="https://instagram.com"><img src="src/storage/img/instagram.png" alt="Instagram"></a>
+                <a href="https://facebook.com"><img src="src/storage/img/facebook.png" alt="Facebook"></a>
+                <a href="https://www.kickstarter.com/"><img src="src/storage/img/kickstarter.png" alt="Kickstarter"></a>
+            </div>
         </section>
         <section id="como__jugar">
             <div class="description">
