feat: :lipstick: Se terminó el inicio

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <img src="src/storage/img/Sun.png" alt="Light mode">
         </div>
     </header>
-    <body>
+    <main>
         <section id="inicio">
             <div class="main__title">
                 <img src="src/storage/img/logo.png" alt="">
                 <h2>Somos creatividad, somos Crae</h2>
                 <p>Crae es un juego de cartas inclusivo donde personas videntes, no videntes y con discapacidad visual pueden participar y disfrutar en conjunto.</p>
             </div>
-            <div>
-                <img src="src/storage/img/cards-images.png" alt="Cartas">
+            <div class="buying">
+                <img src="src/storage/img/cards-images.png" alt="Cartas" class="main__image">
                 <div class="comprar">
                     <img src="src/storage/img/shopping-cart.png" alt="Carrito de compras">
                     <b>Comprar</b>
@@ -112,6 +112,6 @@
                 </div>
             </div>
         </section>
-    </body>
+    </main>
 </body>
 </html>
