feat: :lipstick: Estilo Seccion "apoyanos" completada

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="images__support">
                 <img src="src/storage/img/monitor.png" alt="pantalla monitor">
                 <div class="aporte">
-                    <p>Haz tu aporte</p>
+                    <a href="#">Haz tu aporte</a>
                 </div>
             </div>
         </section>
