--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                 <h2>Sobre nosotros</h2>
                 <p>Somos Aqua, un equipo que apuesta por la inclusión, principalmente por las personas no videntes o de visibilidad reducida.
                     Creemos que la diversión no debe distinguir condiciones físicas es por eso que desarrollamos “CRAE”, el cual busca ser un juego de cartas inclusivo donde personas videntes o no videntes pueden participar y disfrutar en conjunto.
-                    <br>
-                    <br>
-                    Puedes encontrarnos en Instagram como @crae.cl o llamarnos a nuestro número telefónico 9 7889 4758.</p>
+                    <div class="bottom_text_aboutus">
+                        Puedes encontrarnos en Instagram como @crae.cl o llamarnos a nuestro número telefónico 9 7889 4758.</p>
+                    </div>
             </div>
             <div class="images__aboutus">
                 <div class="images__blinds">
