feat: :sparkles: Lineas de seleccion para header agregadas

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
             <img src="src/storage/img/Water-drop.png" alt="Aqua logo">
         </div>
         <nav class="links">
-            <a href="">INICIO</a>
-            <a href="#">CÓMO JUGAR</a>
-            <a href="#">APÓYANOS</a>
-            <a href="#">SOBRE NOSOTROS</a>
+            <nav class="touch__links">
+                <div class="selected"><a href="">INICIO</a> <img src="src/storage/img/Line-2.png" alt=""></div>
+                <a href="#">CÓMO JUGAR</a>
+                <a href="#">APÓYANOS</a>
+                <a href="#">SOBRE NOSOTROS</a>
+            </nav>
+            <img src="src/storage/img/Line-1.png" alt="">
         </nav>
         <div class="theme__modes">
             <img src="src/storage/img/moon.png" alt="Dark mode">
