chore: :wrench: Se configuraron los hipervinculos del header

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </div>
         <nav class="links">
             <nav class="touch__links">
-                <div class="selected"><a href="">INICIO</a> <img src="src/storage/img/Line-2.png" alt=""></div>
-                <a href="#">CÓMO JUGAR</a>
-                <a href="#">APÓYANOS</a>
-                <a href="#">SOBRE NOSOTROS</a>
+                <div class="selected"><a href="#inicio">INICIO</a> <img src="src/storage/img/Line-2.png" alt=""></div>
+                <a href="#como__jugar">CÓMO JUGAR</a>
+                <a href="#apoyanos">APÓYANOS</a>
+                <a href="#nosotros">SOBRE NOSOTROS</a>
             </nav>
             <img src="src/storage/img/Line-1.png" alt="">
         </nav>
